--- a/src/style/Footer.module.scss
+++ b/src/style/Footer.module.scss
@@ -8,9 +8,8 @@
 
     .footerLogo {
         float: right;
-        width: 80px;
-        margin: 0 20px;
-        margin-top: 18px;
+        width: 60px;
+        margin: 20px;
         object-fit: contain;
     }
 }
