--- a/src/App.scss
+++ b/src/App.scss
@@ -14,10 +14,9 @@
 }
 
 body {
-
   color: $mainBlack;
   background: $mainWhite;
-  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Verdana, sans-serif;
+  font-family: 'Montserrat', sans-serif;
   line-height: 1.4;
 }
 h1 {
@@ -36,7 +35,7 @@ h3 {
 }
 h4 {
   font-size: 1.2em;
-  line-height: 1.25;
+  line-height: 1.6;
   margin-bottom: 1.25em;
 }
 h5 {
