--- a/src/style/Register.module.scss
+++ b/src/style/Register.module.scss
@@ -9,6 +9,23 @@
   margin-bottom: 90px;
   border-radius: 5px;
 
+
+  .inputContainer {
+    position: relative;
+
+    .eyeIcon {
+      position: absolute;
+      top: 40px;
+      right: 10px;
+      z-index: 2;
+      width: 35px;
+    }
+  
+    .eyeIcon:hover {
+      cursor: pointer;
+    }
+  }
+
   .buttonContainer {
     display: flex;
     justify-content: flex-start;
