--- a/src/style/Checkout.module.scss
+++ b/src/style/Checkout.module.scss
@@ -3,16 +3,16 @@
 .home {
   display: flex;
   justify-content: center;
-  padding-bottom: 80px;
+  padding: 50px 0;
 
   .productContainer {
     display: flex;
     width: 78%;
     padding: 20px;
     flex-wrap: wrap;
-    justify-content: space-around;
-    width: 58%;
+    justify-content: space-between;
     padding: 0;
+    margin: 0 20px;
   }
 
   .filters {
@@ -22,9 +22,10 @@
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    width: 20%;
     margin: 15px 30px;
     height: 60vh;
+    width: 30vw;
+
 
     .subtotal {
       font-size: 18px !important;
