aside and nav color change

--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -11,7 +11,7 @@
 
     .aside {
       flex: 0 0 10vw;
-      background-color: $neutralColorOne;
+      background-color: $mainWhite;
     }
 
     .article {
@@ -38,7 +38,7 @@
     
     .nav {
       flex: 0 0 10vw;
-      background-color: $neutralColorOne;
+      background-color: $mainWhite;
     }
   }
 }
