--- a/src/components/ProductRenderList/ProductCard.module.scss
+++ b/src/components/ProductRenderList/ProductCard.module.scss
@@ -19,6 +19,7 @@
   
   .productThumbnail {
     max-width: 200px;
+    max-height: 200px;
     object-fit: contain;
     height: 35vh;
     width: 100%;
