--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -17,12 +17,18 @@
     .article {
       flex: 1 1 auto;
 
-      .homeImage {
-        width: 100%;
-        z-index: -1;
-        margin-bottom: -150px;
-        mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+      .homeContainer {
+        margin-bottom: 100px;
+
+        .homeImage {
+          width: 100%;
+          z-index: -1;
+          margin-bottom: -150px;
+          mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1), rgba(0, 0, 0, 0));
+        }
       }
+
+  
 
       .emptySearch {
         display: flex;
